--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>   
             <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!--<li><a href="#contact">Contact</a></li>-->
 
         </ul>
         
@@ -182,7 +182,7 @@
             </div>
         </div>
     </section>
-    <!--Contact-->
+    <!--Contact
     <section id="contact">
         <h1 class="headings">Contact</h1>
         <form action="prasaddmane743@gmail.com" method="post" enctype="text/plain" class="form">
@@ -191,7 +191,7 @@
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Message" required></textarea>
             <input type="submit" value="SEND" id="send">
         </form>
-
+-->
     </section>
     <hr size="4px" color="white">
     <!--Footer-->
@@ -205,7 +205,7 @@
                         <a href="#home">Home</a>
                         <a href="#about">About Us</a>
                         <a href="#projects">Projects</a>
-                        <a href="#contact">Contact</a>
+                        <!--<a href="#contact">Contact</a>-->
                     </div>
                 </div>
 
