--- a/index.html
+++ b/index.html
@@ -40,34 +40,25 @@
             <img id="img-my" src="./image/me_1_new.jpg" alt="" id="my-img">
             <div class="intro">
                 <h2 style="color: white; padding-left: 50px;">Prasad Mane</h2>
-                <p style="color: white;" id="bio">
+              
+                            <br></h3>
+                 <p class="p-java" style=" color: white;text-align: justify; padding-left: 50px; padding-right: 255px;">
                     🌟 **Prasad | Full Stack Web Developer**<br>
                     Completed my Bachelor's degree in 2023 with a passion for technology and innovation.
-                    <br>
                     Proficient in a wide array of skills, specializing in web development, software engineering, and
                     both front-end and back-end technologies.
-                    <br>
                     Leveraging my technical expertise to craft seamless digital experiences and scalable solutions.
-                    <br>
                     Academic Excellence: Graduated with honors, showcasing dedication and commitment to excellence.
-                    <br>
                     Tech Toolbox: A versatile developer with skills in HTML, CSS, JavaScript, Java, and more.
-                    <br>
                     Web Enthusiast: Creating dynamic and responsive web applications that leave a lasting impression.
-                    <br>
                     Continuous Learner: Staying ahead in the tech landscape by embracing new tools and frameworks.
-                    <br>
                     Future Vision: Aspiring to contribute to cutting-edge projects and make a significant impact in the
                     tech industry.
-                    <br>
                     Collaborative Spirit: A team player with effective communication skills, ready for exciting
                     collaborations.
-                    <br>
                     Let's Connect: Open to new opportunities and collaborations. Reach out at, <a
-                        href="#contact">prasadmane743@gmail.com</a>.
-    
-                            <br></h3>
-                <p class="p-java" style=" color: white;text-align: justify; padding-left: 50px; padding-right: 255px;">🌟 **Prasad | Java Developer**<br>Passionate Java developer with a strong foundation in object-oriented programming.
+                        href="#contact">prasadmane743@gmail.com</a>.<br><br>
+                    🌟 **Prasad | Java Developer**<br>Passionate Java developer with a strong foundation in object-oriented programming.
                     Proficient in designing and implementing scalable, maintainable, and efficient code. Experienced in
                     full-stack development, adept at collaborating with cross-functional teams to deliver high-quality
                     software solutions. Continuously learning and adapting to emerging technologies to stay at the
