--- a/index.html
+++ b/index.html
@@ -137,13 +137,21 @@
     <!--Projects-->
     <section id="projects" style="background: rgba(0, 0, 0, 0.7);;">
         <h1 class="headings" style="color: white; margin-top: 0px;  padding-top: 60px;">Projects</h1>
+
+        <div class="project" id="project-0">
+            <h2 style="color: white;">Recruitment Managment System</h2>
+            <p id="p1">Description:- A Recruitment System developed using HTML, CSS, JavaScript, and PHP isa dynamic web 
+                application that seamlessly integrates an intuitive user interface (HTML and CSS) with interactive functionalities 
+                (JavaScript) and server-side processing (PHP) to streamline and automate the recruitment process.</p>
+            <p id="p1">Technologies:- HTML, CSS, JavaScript,php</p>
+            <p id="p1">GitHub:- <a href="https://github.com/Prasadmane2121/Recruitment_Management_System" target="_blank">Click Here</a></p>
+        </div>
         <div class="project" id="project-1">
             <h2 style="color: white;">Calculator</h2>
             <p id="p1">Description:- Developed a fully functional Calculator for adiition , substraction,multiplication
                 and division. The calculator should have a display screen to show user input and results.</p>
             <p id="p1">Technologies:- HTML, CSS, JavaScript.</p>
             <p id="p1">GitHub:- <a href="https://github.com/Prasadmane2121/CODSOFT/tree/main/CALCULATOR" target="_blank">Click Here</a></p>
-            
         </div>
 
         <div class="project" id="praject-2" style="margin-bottom: 0px;">
