--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <section id="resume" style="padding-top: 60px;">
         <div>
             <h1 class="headings" style="color: white; margin-top: 0px;">Resume</h1>
-            <div><a href="./resume/Prasad Updated Resume.pdf" style="align-items: center;" download>
+            <div style="display: flex;justify-content: center; align-items: center;"><a href="./resume/Prasad Updated Resume.pdf" style="align-items: center;" download>
                     <button id="btn-resume" >View Resume</button>
                 </a>
             </div>
