--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
                     <ul style="padding-top: 15px;">
                         <li>HTML/CSS</li>
                         <li>JavaScript</li>
-                        <li>React/Angular</li>
                         <li>Git/GitHub</li>
                         <li>Java(Spring , JDBC)</li>
                         <li>APIs</li>
-                        <li>MySQL/Oracle</li>
+                        <li>MySQL</li>
                         <li>VS code</li>
                         
                     </ul>
@@ -97,7 +96,6 @@
                     <ul style="padding-top: 15px;">
                         <li>HTML/CSS</li>
                         <li>JavaScript</li>
-                        <li>Angular</li>
                         <li>Java(Spring , JDBC)</li>
                         <li>SQL</li>
                         <li>MySQL/Oracle</li>
@@ -110,9 +108,9 @@
                 <img src="./image/front_end.png">
                 <h3 class="heading" id="skill-top">Front-End Development</h3>
                 <p><ul style="padding-top: 15px;">
-                    <li>HTML/CSS</li>
+                    <li>HTML</li>
+                     <li>CSS</li>
                     <li>JavaScript</li>
-                    <li>React/Angular</li>
                     <li>Git/GitHub</li>
                     <li>VS code</li>
                 </ul></p>
