--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <section id="resume" style="padding-top: 60px;">
         <divstyle="display: flex;justify-content: center; align-items: center;">
             <h1 class="headings" style="color: white; margin-top: 0px;">Resume</h1>
-            <div ><a href="./resume/Prasad Updated Resume.pdf" style="align-items: center;" download>
+            <div ><a href="./resume/Prasad's Resume (1).pdf" style="align-items: center;" download>
                     <button id="btn-resume" >View Resume</button>
                 </a>
             </div>
