--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>   
             <li><a href="#resume">Resume</a></li>
-            <!--<li><a href="#contact">Contact</a></li>-->
+            <li><a href="#contact">Contact</a></li>
 
         </ul>
         
@@ -179,16 +179,16 @@
             </div>
         </div>
     </section>
-    <!--Contact
+    Contact
     <section id="contact">
         <h1 class="headings">Contact</h1>
-        <form action="prasaddmane743@gmail.com" method="post" enctype="text/plain" class="form">
+         <form action="https://formspree.io/f/blackperl2121@gmail.com" method="post" class="form">
             <input type="text" name="name" class="input" placeholder="Enter Your name" required>
             <input type="email" name="email" class="input" placeholder="Enter Your Email" required>
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Message" required></textarea>
             <input type="submit" value="SEND" id="send">
         </form>
--->
+
     </section>
     <hr size="4px" color="white">
     <!--Footer-->
