--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
     Contact
     <section id="contact">
         <h1 class="headings">Contact</h1>
-         <form action="https://formspree.io/f/blackperl2121@gmail.com" method="post" class="form">
+        <!-- <form action="https://formspree.io/f/blackperl2121@gmail.com" method="post" class="form">
             <input type="text" name="name" class="input" placeholder="Enter Your name" required>
             <input type="email" name="email" class="input" placeholder="Enter Your Email" required>
             <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Message" required></textarea>
             <input type="submit" value="SEND" id="send">
-        </form>
+        </form>-->
 
     </section>
     <hr size="4px" color="white">
