--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </section>
     Contact
     <section id="contact">
-        <h1 class="headings">Contact</h1>
+        <!--<h1 class="headings">Contact</h1>
         <!-- <form action="https://formspree.io/f/blackperl2121@gmail.com" method="post" class="form">
             <input type="text" name="name" class="input" placeholder="Enter Your name" required>
             <input type="email" name="email" class="input" placeholder="Enter Your Email" required>
