--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>   
             <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
+           <!-- <li><a href="#contact">Contact</a></li>-->
 
         </ul>
         
@@ -180,8 +180,8 @@
         </div>
     </section>
     Contact
-    <section id="contact">
-        <!--<h1 class="headings">Contact</h1>
+    <!--<section id="contact">
+        <h1 class="headings">Contact</h1>
         <!-- <form action="https://formspree.io/f/blackperl2121@gmail.com" method="post" class="form">
             <input type="text" name="name" class="input" placeholder="Enter Your name" required>
             <input type="email" name="email" class="input" placeholder="Enter Your Email" required>
@@ -189,7 +189,7 @@
             <input type="submit" value="SEND" id="send">
         </form>-->
 
-    </section>
+    </section>-->
     <hr size="4px" color="white">
     <!--Footer-->
     <footer>
