--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <input type="submit" value="SEND" id="send">
         </form>-->
 
-    </section>-->
+    </section>
     <hr size="4px" color="white">
     <!--Footer-->
     <footer>
